--- a/Part01/20_RelationalOperator/20_RelationalOperator.csproj
+++ b/Part01/20_RelationalOperator/20_RelationalOperator.csproj
@@ -1,10 +1,10 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
-    <RootNamespace>_14_StringToNumber</RootNamespace>
-    <ImplicitUsings>enable</ImplicitUsings>
+    <RootNamespace>_20_RelationalOperator</RootNamespace>
+    <ImplicitUsings>disable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
