--- a/Part01/55_PrimeNumbers/55_PrimeNumbers.csproj
+++ b/Part01/55_PrimeNumbers/55_PrimeNumbers.csproj
@@ -1,9 +1,9 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
-    <RootNamespace>_39_Object</RootNamespace>
+    <RootNamespace>_55_PrimeNumbers</RootNamespace>
     <ImplicitUsings>disable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
