--- a/Part01/56_LoopPyramid/56_LoopPyramid.csproj
+++ b/Part01/56_LoopPyramid/56_LoopPyramid.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
-    <RootNamespace>_39_Object</RootNamespace>
+    <RootNamespace>_56_LoopPyramid</RootNamespace>
     <ImplicitUsings>disable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
